fix stats light and dark mode colors

--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,6 @@
     margin: auto;
 }
 
-.modalStyle{
-  background-color: rgba(12, 13, 14, 0.6) !important;
-  backdrop-filter: blur(3px);           /* štandardný zápis */
-  -webkit-backdrop-filter: blur(3px);   /* podpora pre Safari */
-
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
-  color: white; 
-}
 
 
 .modalCntnt{
